--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -35,6 +35,7 @@
                     <br/>
                     <group>
                         <group>
+                            <field name="property_type_id"/>
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
