--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -33,7 +33,8 @@
                         <field name="name"/>
                     </h1>
                     <field name="tag_ids" widget="many2many_tags"/>
-                    <br/><br/>
+                    <br/>
+                    <br/>
                     <group>
                         <group>
                             <field name="property_type_id"/>
@@ -59,6 +60,9 @@
                                 <field name="garden_area"/>
                                 <field name="garden_orientation"/>
                             </group>
+                        </page>
+                        <page string="Offers">
+                            <field name="offer_ids"/>
                         </page>
                         <page string="Other Info">
                             <br/>
