--- a/views/estate_property_offer_views.xml
+++ b/views/estate_property_offer_views.xml
@@ -9,8 +9,10 @@
             <form string="Estate Property">
                 <sheet>
                     <group>
-                        <field name="partner_id"/>
                         <field name="price"/>
+                        <field name="partner_id"/>
+                        <field name="validity"/>
+                        <field name="date_deadline"/>
                         <field name="status"/>
                     </group>
                 </sheet>
@@ -26,6 +28,8 @@
             <tree string="Offer">
                 <field name="price"/>
                 <field name="partner_id"/>
+                <field name="validity"/>
+                <field name="date_deadline"/>
                 <field name="status"/>
             </tree>
         </field>
