--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -28,6 +28,10 @@
         <field name="arch" type="xml">
 
             <form string="Estate Property">
+                <header>
+                    <button name="action_sold_property" type="object" string="Sold"/>
+                    <button name="action_cancel_property" type="object" string="Cancel"/>
+                </header>
                 <sheet>
                     <h1>
                         <field name="name"/>
