--- a/views/estate_property_type_views.xml
+++ b/views/estate_property_type_views.xml
@@ -11,6 +11,18 @@
                     <h1>
                         <field name="name"/>
                     </h1>
+                    <br/>
+                    <notebook>
+                        <page string="Properties">
+                            <field name="property_ids">
+                                <tree>
+                                    <field name="name"/>
+                                    <field name="expected_price"/>
+                                    <field name="state"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
 
