--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -31,6 +31,7 @@
                 <header>
                     <button name="action_sold_property" type="object" string="Sold"/>
                     <button name="action_cancel_property" type="object" string="Cancel"/>
+                    <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
                     <h1>
