--- a/views/estate_property_type_views.xml
+++ b/views/estate_property_type_views.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0"?>
 <odoo>
 
+    <record id="estate_property_type_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.type.tree</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <tree string="Property Types">
+                <field name="sequence" widget="handle"/>
+                <field name="name"/>
+            </tree>
+        </field>
+    </record>
+
     <record id="estate_property_type_view_form" model="ir.ui.view">
         <field name="name">estate.property.type.tree</field>
         <field name="model">estate.property.type</field>
         <field name="arch" type="xml">
-
             <form string="Property Type">
                 <sheet>
                     <h1>
@@ -25,7 +35,6 @@
                     </notebook>
                 </sheet>
             </form>
-
         </field>
     </record>
 
