--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -42,7 +42,7 @@
                     <br/>
                     <group>
                         <group>
-                            <field name="property_type_id"/>
+                            <field name="property_type_id" options="{'no_create': True}"/>
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
