--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -29,8 +29,8 @@
 
             <form string="Estate Property">
                 <header>
-                    <button name="action_sold_property" type="object" string="Sold"/>
-                    <button name="action_cancel_property" type="object" string="Cancel"/>
+                    <button name="action_sold_property" type="object" string="Sold" states="new,offer_received,offer_accepted"/>
+                    <button name="action_cancel_property" type="object" string="Cancel" states="new,offer_received,offer_accepted"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
