[IMP] estate: make offer_ids readonly on sold, accepted or canceled state
Making the offer_ids read only when the property is in sold, offer_accepted or canceled state prevents the user from adding offers.

--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -69,7 +69,7 @@
                             </group>
                         </page>
                         <page string="Offers">
-                            <field name="offer_ids"/>
+                            <field name="offer_ids" attrs="{'readonly': ['|', ('state', '=', 'sold'), '|', ('state', '=', 'offer_accepted'), ('state', '=', 'canceled')] }"/>
                         </page>
                         <page string="Other Info">
                             <br/>
