--- a/views/estate_property_tag_views.xml
+++ b/views/estate_property_tag_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <odoo>
 
-    <record id="estate_property_tag_view_form" model="ir.ui.view">
+    <!--<record id="estate_property_tag_view_form" model="ir.ui.view">
         <field name="name">estate.property.tag.tree</field>
         <field name="model">estate.property.tag</field>
         <field name="arch" type="xml">
@@ -14,6 +14,16 @@
                 </sheet>
             </form>
 
+        </field>
+    </record>-->
+
+    <record id="estate_property_tag_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.tag.tree</field>
+        <field name="model">estate.property.tag</field>
+        <field name="arch" type="xml">
+            <tree string="Tag" editable="bottom">
+                <field name="name"/>
+            </tree>
         </field>
     </record>
 
