[IMP] estate: add decorations to list view
Color codes are useful to visually emphasize records, in this case we can display properties with offers received, accepted or sold and offers that were accepted or refused without adding showing the field in the list view.

--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -89,7 +89,7 @@
         <field name="name">estate.property.tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
-            <tree string="Property">
+            <tree string="Property" decoration-success="state in ['offer_received', 'offer_accepted']" decoration-bf="state=='offer_accepted'" decoration-muted="state=='sold'">
                 <field name="name"/>
                 <field name="postcode"/>
                 <field name="bedrooms"/>
@@ -97,6 +97,7 @@
                 <field name="expected_price"/>
                 <field name="selling_price"/>
                 <field name="date_availability" optional="hide"/>
+                <field name="state" invisible="1"/>
             </tree>
         </field>
     </record>
