[FIX] estate: change duplicate names in views
Some views had the same name so they didn't appropriately reflect the view and could cause issues later on.

--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <record id="estate_property_search" model="ir.ui.view">
-        <field name="name">estate.property.tree</field>
+        <field name="name">estate.property.search</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <search string="Estate Property">
@@ -23,7 +23,7 @@
     </record>
 
     <record id="estate_property_view_form" model="ir.ui.view">
-        <field name="name">estate.property.tree</field>
+        <field name="name">estate.property.form</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
 
