--- a/views/estate_property_type_views.xml
+++ b/views/estate_property_type_views.xml
@@ -13,7 +13,7 @@
     </record>
 
     <record id="estate_property_type_view_form" model="ir.ui.view">
-        <field name="name">estate.property.type.tree</field>
+        <field name="name">estate.property.type.form</field>
         <field name="model">estate.property.type</field>
         <field name="arch" type="xml">
             <form string="Property Type">
