[IMP] estate: change the living area search
In practice, a user will want to search for properties of ‘at least’ the given area. It is unrealistic to expect users would want to find a property of an exact living area.

--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -10,10 +10,10 @@
                 <field name="postcode"/>
                 <field name="expected_price"/>
                 <field name="bedrooms"/>
-                <field name="living_area"/>
+                <field name="living_area" string="Living Area (sqm)"
+                       filter_domain="[('living_area', '>=', self)]"/>
                 <field name="facades"/>
-                <separator/>
-                <filter string="Available" name="available_filter"
+                <filter string="Available" name="available"
                         domain="['|', ('state', '=', 'new'), ('state', '=', 'offer_received')]"/>
                 <group expand="1" string="Group By">
                     <filter string="Postcode" name="postcode_group" context="{'group_by':'postcode'}"/>
@@ -69,7 +69,7 @@
                             </group>
                         </page>
                         <page string="Offers">
-                            <field name="offer_ids" attrs="{'readonly': ['|', ('state', '=', 'sold'), '|', ('state', '=', 'offer_accepted'), ('state', '=', 'canceled')] }"/>
+                            <field name="offer_ids" attrs="{'readonly': ['|', ('state', '=', 'sold'), '|', ('state', '=', 'offer_accepted'), ('state', '=', 'canceled')]}"/>
                         </page>
                         <page string="Other Info">
                             <br/>
