[IMP] estate: add a stat button to property type
Added stat button to display the number of offers received for all properties of the selected type, then showing the offer list when clicking.

--- a/views/estate_property_type_views.xml
+++ b/views/estate_property_type_views.xml
@@ -18,6 +18,13 @@
         <field name="arch" type="xml">
             <form string="Property Type">
                 <sheet>
+                    <div name="button_box" class="oe_button_box">
+                        <button type="action" name="%(estate_offer_action)d" string="Property Offers" class="oe_stat_button" icon="fa-money">
+                            <span>
+                                <field name="offer_count"/> Offers
+                            </span>
+                        </button>
+                    </div>
                     <h1>
                         <field name="name"/>
                     </h1>
