--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0"?>
 <odoo>
 
+    <record id="estate_property_view_kanban" model="ir.ui.view">
+        <field name="name">estate.property.kanban</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="property_type_id" records_draggable="False">
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click">
+                            <div class="oe_kanban_details">
+                                <div>
+                                    <strong><field name="name"/></strong>
+                                </div>
+                                <div>
+                                    Expected Price: <field name="expected_price"/>
+                                </div>
+                                <div t-if="record.best_price.raw_value">
+                                    Best Offer: <field name="best_price"/>
+                                </div>
+                                <div t-if="record.selling_price.raw_value">
+                                    Selling Price: <field name="selling_price"/>
+                                </div>
+                                <div t-if="record.tag_ids.raw_value">
+                                    <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <record id="estate_property_search" model="ir.ui.view">
         <field name="name">estate.property.search</field>
         <field name="model">estate.property</field>
@@ -26,11 +58,12 @@
         <field name="name">estate.property.form</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
-
             <form string="Estate Property">
                 <header>
-                    <button name="action_sold_property" type="object" string="Sold" states="new,offer_received,offer_accepted"/>
-                    <button name="action_cancel_property" type="object" string="Cancel" states="new,offer_received,offer_accepted"/>
+                    <button name="action_sold_property" type="object" string="Sold"
+                            states="new,offer_received,offer_accepted"/>
+                    <button name="action_cancel_property" type="object" string="Cancel"
+                            states="new,offer_received,offer_accepted"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
@@ -69,7 +102,8 @@
                             </group>
                         </page>
                         <page string="Offers">
-                            <field name="offer_ids" attrs="{'readonly': ['|', ('state', '=', 'sold'), '|', ('state', '=', 'offer_accepted'), ('state', '=', 'canceled')]}"/>
+                            <field name="offer_ids"
+                                   attrs="{'readonly': ['|', ('state', '=', 'sold'), '|', ('state', '=', 'offer_accepted'), ('state', '=', 'canceled')]}"/>
                         </page>
                         <page string="Other Info">
                             <br/>
@@ -81,7 +115,6 @@
                     </notebook>
                 </sheet>
             </form>
-
         </field>
     </record>
 
@@ -89,7 +122,8 @@
         <field name="name">estate.property.tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
-            <tree string="Property" decoration-success="state in ['offer_received', 'offer_accepted']" decoration-bf="state=='offer_accepted'" decoration-muted="state=='sold'">
+            <tree string="Property" decoration-success="state in ['offer_received', 'offer_accepted']"
+                  decoration-bf="state=='offer_accepted'" decoration-muted="state=='sold'">
                 <field name="name"/>
                 <field name="postcode"/>
                 <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
@@ -106,8 +140,10 @@
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
-        <field name="view_mode">tree,form</field>
-        <field name="context">{'search_default_available': True}</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="context">
+            {'search_default_available': True}
+        </field>
     </record>
 
 </odoo>
